deployment test done