@@ -6,6 +6,7 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 project.ext.mainClassName = "com.mygdx.game.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../core/assets");
 
+def osName = System.getProperty('os.name').toLowerCase(Locale.ROOT)
 task run(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
     classpath = sourceSets.main.runtimeClasspath
@@ -26,9 +27,11 @@ task debug(dependsOn: classes, type: JavaExec) {
 task dist(type: Jar) {
     from files(sourceSets.main.output.classesDirs)
     from files(sourceSets.main.output.resourcesDir)
-    from {configurations.compile.collect {zipTree(it)}}
+    from {configurations.runtimeClasspath.collect {zipTree(it)}}
     from files(project.assetsDir);
- 
+
+    duplicatesStrategy = 'exclude'
+
     manifest {
         attributes 'Main-Class': project.mainClassName
     }
@@ -53,3 +56,62 @@ task afterEclipseImport(description: "Post processing after project generation",
     printer.print(classpath)
   }
 }
+
+// creates a slim JDK runtime for distribution
+task createRuntime(type: Exec) {
+    doFirst() {
+        project.delete("${buildDir}/runtime")
+    }
+    String runtimePath = "${buildDir}/runtime"
+
+    workingDir project.projectDir
+    commandLine = [
+            "C:\\Program Files\\Java\\jdk-19\\bin\\jlink",
+            '-p', "${project.projectDir}/jpackage/jmods",
+            '--add-modules', 'java.base,java.desktop,jdk.unsupported',
+            '--strip-debug',
+            '--no-header-files',
+            '--no-man-pages',
+            '--strip-native-commands',
+            "--vm=server",
+            "--compress=2",
+            '--output', runtimePath
+    ]
+}
+
+task jpackage(type: Exec, dependsOn: dist) {
+    doFirst() {
+        project.delete("${buildDir}/distribution/$project.appName")
+    }
+    dependsOn createRuntime
+    workingDir project.projectDir
+    def commands = [
+            "C:\\Program Files\\Java\\jdk-19\\bin\\jpackage",
+            '--dest', "${buildDir}/distribution",
+            '--input', "${buildDir}/libs",
+            '--name', project.appName,
+            '--main-class', project.mainClassName,
+            '--main-jar', jar.archiveFile.get().asFile.getName(),
+            '--runtime-image', "${buildDir}/runtime"
+    ]
+
+    if (osName.contains('windows')) {
+        commands << '--type'
+        commands << "exe"
+        commands << '--icon'
+        commands << "${project.projectDir}/logo.ico"
+    } else if (osName.contains('linux')) {
+        commands << '--type'
+        commands << "deb"
+        commands << '--icon'
+        commands << "${project.projectDir}/logo.png"
+    } else if (osName.contains('mac')) {
+        commands << '--type'
+        commands << "pkg"
+        commands << '--icon'
+        commands << "${project.projectDir}/logo.icns"
+    }
+
+    commandLine = commands
+}
+
